# binder-for-linux-kernel-5

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile
src/async_service/: CMakeLists.txt  CallbackInterfaceImpl.cpp  CallbackInterfaceImpl.h  ICallbackInterface.cpp  ICallbackInterface.h  ITestInterface.cpp  ITestInterface.h  TestCallback.cpp  TestCallback.h  TestInterfaceImpl.cpp  TestInterfaceImpl.h  client.cpp  server.cpp
src/binder/: Makefile
src/binder-control/: CMakeLists.txt  Makefile  binderfs.c
src/binder/include/: stdatomic.h
src/binder/include/binder/: Parcel.h
src/binder/include/private/binder/: Static.h  binder_module.h
src/binder/include/utils/: Printer.h  SortedVector.h
src/binder/libbinder/: IMemory.cpp  IServiceManager.cpp  Makefile  MemoryHeapBase.cpp  Parcel.cpp  Static.cpp
src/binder/libutils/: CallStack.cpp  Makefile  RefBase.cpp  Threads.cpp  VectorImpl.cpp
src/clipboard_service/: CMakeLists.txt  client.cpp  clipboard_manager.cc  clipboard_manager.h  server.cpp
src/clipboard_service/ipc/: clipboard_service.pb.cc  clipboard_service.pb.h  clipboard_service.proto  clipboard_service_svr_impl.cc  gen_clipboard_service_cb.cc  gen_clipboard_service_cb.h  gen_clipboard_service_cb_impl.cc  gen_clipboard_service_cb_impl.h  gen_clipboard_service_cli.cc  gen_clipboard_service_cli.h  gen_clipboard_service_comm.cc  gen_clipboard_service_comm.h  gen_clipboard_service_server.cc  gen_clipboard_service_svr_impl.h
src/include/driver/: binder.h
src/liblog/: Log.c  Makefile
src/libs/: CMakeLists.txt  Makefile
src/libs/binder/: Makefile  ProcessState.cpp
src/libs/cutils/: Makefile
src/libs/include/driver/ashmem/: deps.h
src/libs/include/utils/: Vector.h
src/libs/utils/: Makefile
src/login_service/: CMakeLists.txt  CallbackInterfaceImpl.cpp  CallbackInterfaceImpl.h  ICallbackInterface.cpp  ICallbackInterface.h  ILoginInterface.cpp  ILoginInterface.h  LoginClientImpl.cpp  LoginClientImpl.h  LoginInterfaceImpl.cpp  LoginInterfaceImpl.h  client.cpp  server.cpp
src/servicemanager/: CMakeLists.txt  Makefile  binder.c  binder.h  service_manager.c  servicemanager
src/test_service/: CMakeLists.txt  IBasicService.cpp  IBasicService.h  Makefile  client.cpp  server.cpp
